# Fusion

./: .gitignore  .gitmodules  BUILD.bat  BuildAndRunSln.bat  CMakeLists.txt  CleanUp.bat  CleanUpWithAssets.bat  FetchAssets.bat  README.md
Assets/Models/CartoonTugboat/: CartoonTugboat.gltf  license.txt
Assets/Shaders/Applications/Deferred/: Cube.hlsl
Assets/Shaders/Applications/Init/: Cube.hlsl  Model.hlsl  shaders.cfg
Assets/Shaders/Applications/MeshShaders/: Triangle.hlsl  shaders.cfg
Assets/Shaders/Common/: rect_vs.hlsl  shaders.cfg  sharpen_ps.hlsl  skinning_cs.hlsl
Assets/Shaders/Includes/: deferred_lighting_cb.h  gbuffer.hlsli  lighting_cb.h  scene_material.hlsli  utils.hlsli
Assets/Shaders/RenderPasses/: cubemap_gs.hlsl  deferred_lighting_cs.hlsl  forward_ps.hlsl  forward_vs.hlsl  gbuffer_ps.hlsl  gbuffer_vs.hlsl  material_id_ps.hlsl  motion_vectors_ps.hlsl  shaders.cfg  taa_cs.hlsl
Fusion/: CMakeLists.txt
Fusion/Application/: CMakeLists.txt
Fusion/Application/Init/: CMakeLists.txt  Init.cpp  Init.h  main.cpp
Fusion/Applications/: CMakeLists.txt
Fusion/Applications/Deferred/: CMakeLists.txt  Deferred.cpp  Deferred.h  main.cpp
Fusion/Applications/Init/: CMakeLists.txt  Init.cpp  Init.h  main.cpp
Fusion/Applications/MaterialsPlayground/: CMakeLists.txt  MaterialsPlayground.cpp  MaterialsPlayground.h  main.cpp
Fusion/Applications/MeshShaders/: CMakeLists.txt  MeshShaders.cpp  MeshShaders.h  main.cpp
Fusion/Applications/PBRTesting/: CMakeLists.txt  PBRTesting.cpp  PBRTesting.h  main.cpp
Fusion/Core/: CMakeLists.txt  CorePCH.hpp
Fusion/Core/App/: App.h  ApplicationBase.cpp  ApplicationBase.h  DeviceManager.cpp  DeviceManager.h
Fusion/Core/App/Camera/: Camera.cpp  Camera.h
Fusion/Core/App/DX12/: DeviceManager_DX12.cpp
Fusion/Core/App/Imgui/: imgui_console.cpp  imgui_console.h  imgui_nvrhi.cpp  imgui_renderer.cpp  imgui_renderer.h
Fusion/Core/App/Vulkan/: DeviceManager_VK.cpp
Fusion/Core/Editors/Material/: MaterialEditor.cpp  MaterialEditor.h
Fusion/Core/Engine/: BindingCache.cpp  CommonRenderPasses.cpp  CommonRenderPasses.h  ConsoleInterpreter.cpp  ConsoleObjects.cpp  ConsoleObjects.h  DDSFile.cpp  DescriptorTableManager.cpp  FramebufferFactory.cpp  GltfImporter.cpp  KeyframeAnimation.cpp  KeyframeAnimation.h  Material.cpp  MaterialBindingCache.cpp  MaterialBindingCache.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneTypes.cpp  SceneTypes.h  ShaderFactory.cpp  ShaderFactory.h  ShadowMap.h  TextureCache.cpp  TextureCache.h  View.cpp  View.h
Fusion/Core/Events/: callbacklist.h  eventdispatcher.h  eventpolicies.h  eventqueue.h
Fusion/Core/Render/: DeferredLightingPass.cpp  DeferredLightingPass.h  DrawStrategy.cpp  DrawStrategy.h  ForwardShadingPass.cpp  ForwardShadingPass.h  GBuffer.cpp  GBuffer.h  GBufferFillPass.cpp  GBufferFillPass.h  GeometryPasses.cpp  GeometryPasses.h
Fusion/Core/ShaderMake/: ShaderBlob.cpp  ShaderMake.cpp  ShaderMake.hpp
Fusion/Core/SignalSlot/: signal.hpp
Fusion/Core/SignalSlot/adapter/: qt.hpp
Fusion/Core/Threading/: ThreadPool.hpp
Fusion/Core/Utilities/: Macros.hpp  Utilities.hpp  json.cpp  json.h  string_utils.cpp  string_utils.h
Fusion/Core/Utilities/Logger/: Log.cpp  Log.h  Logger.cpp  Logger.h
Fusion/Core/Utilities/Math/: color.cpp  color.h  frustum.cpp  matrix.cpp  matrix.h  vector.cpp  vector.h
Fusion/Core/Utilities/Profiling/: ImGuiProfilerRenderer.cpp  ImGuiProfilerRenderer.h
Fusion/Core/Utilities/Shaders/: ShaderCompiler.cpp  ShaderCompiler.h
Fusion/Core/VFS/: Compression.cpp  Compression.h  TarFile.cpp  TarFile.h  VFS.cpp  WinResFS.cpp  WinResFS.h
Scripts/: Build.bat  BuildAndRunSln.bat  CleanUp.bat  CleanUpShaders.bat  CleanUpWithAssets.bat  FetchAssets.bat  OpenFusionSln.bat
